<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="android.view.View" />

        <variable
            name="serverListVM"
            type="com.iut.clermont.rustwipe.viewmodel.ServerListViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.activity.ServerListActivity">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            app:spanCount="1"
            tools:listitem="@layout/item_list_server" />

        <androidx.constraintlayout.widget.Group
            android:id="@+id/group_empty_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="@{serverListVM.showEmptyView ? View.VISIBLE : View.GONE}"
            app:constraint_referenced_ids="shelter_icon,empty_view_title,empty_view_subtitle" />

            <ImageView
                android:id="@+id/shelter_icon"
                android:layout_width="@dimen/image_max"
                android:layout_height="@dimen/image_max"
                android:contentDescription="@string/empty_view_subtitle_text"
                android:src="@drawable/ic_empty"
                app:layout_constraintBottom_toTopOf="@+id/empty_view_title"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent" />

            <TextView
                android:id="@+id/empty_view_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:paddingTop="@dimen/medium_space"
                android:text="@string/empty_view_title_text"
                android:textAppearance="?android:textAppearanceMedium"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/empty_view_subtitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:paddingTop="@dimen/small_space"
                android:text="@string/empty_view_subtitle_text"
                android:textAppearance="?android:textAppearanceSmall"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/empty_view_title" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_add_server"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_margin"
            android:contentDescription="@string/add_server_accessibility_text"
            android:src="@drawable/ic_add"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>